Add request ID logging

--- a/UJCSystem/ITJakub.Web.Hub/log4net.config
+++ b/UJCSystem/ITJakub.Web.Hub/log4net.config
@@ -10,7 +10,7 @@
     <staticLogFileName value="false" />
     <countDirection value="-1" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      <conversionPattern value="%date [%thread] %-5level %logger - %message | traceId: %property{TraceId}%newline" />
     </layout>
   </appender>
 
