--- a/UJCSystem/Vokabular.ImportTestData.App/Vokabular.ImportTestData.App.csproj
+++ b/UJCSystem/Vokabular.ImportTestData.App/Vokabular.ImportTestData.App.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="4.0.7" />
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="3.0.3" />
+    <PackageReference Include="NLipsum" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
