Add configurable reserved usernames

--- a/UJCSystem/Vokabular.MainService/appsettings.json
+++ b/UJCSystem/Vokabular.MainService/appsettings.json
@@ -41,5 +41,10 @@
     "EscapedEscapeCharacter": "\\\\",
     "EscapedCommentMarkOpening": "\\$",
     "EscapedCommentMarkClosing": "\\%"
+  },
+  "RegistrationOption": {
+    "ReservedUsernames": [
+      "info"
+    ]
   }
 }
