Use BookId property in Card files

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
@@ -429,7 +429,7 @@
     },
     "right-panel": {
       "read-button": {
-        "url": "CardFiles\\CardFiles\\Listing?cardFileId={BookXmlId}"
+        "url": "CardFiles\\CardFiles\\Listing?cardFileId={BookId}"
       },
       "variables": {
         "$test": {
