Show icon with project type info in biliography module, show all books in bibliography list

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/ProfessionalLiterature/content/BibliographyPlugin/list_configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/ProfessionalLiterature/content/BibliographyPlugin/list_configuration.json
@@ -71,6 +71,9 @@
         }
       }
     },
+    "middle-right-panel": {
+      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+    },
     "bottom-panel": {
       "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
