--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
@@ -71,6 +71,9 @@
         }
       }
     },
+    "middle-right-panel": {
+      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+    },
     "bottom-panel": {
       "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
@@ -165,7 +168,7 @@
           "type": "basic",
           "pattern": "<a href='{ForumUrl}'>{@Link}</a>",
           "printIfNullValue": false
-        } 
+        }
 
       }
     },
