Add support for base URL to variable interpreter, fix URLs in bibliography configuration JSONs

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
@@ -72,10 +72,10 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
-      "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
+      "body": "{$printSearchResultsCondition}{$editionTable}<a href='{$baseUrl}EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
         "$editionTable": {
           "type": "table",
@@ -213,7 +213,7 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "right-panel": {
       "read-button": {
@@ -297,10 +297,10 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
-      "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
+      "body": "{$printSearchResultsCondition}{$editionTable}<a href='{$baseUrl}EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
         "$editionTable": {
           "type": "table",
@@ -505,7 +505,7 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "right-panel": {
       "favorite-button": {},
@@ -633,10 +633,10 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
-      "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
+      "body": "{$printSearchResultsCondition}{$editionTable}<a href='{$baseUrl}EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
         "$editionTable": {
           "type": "table",
@@ -821,10 +821,10 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
-      "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
+      "body": "{$printSearchResultsCondition}{$editionTable}<a href='{$baseUrl}EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
         "$editionTable": {
           "type": "table",
@@ -1009,7 +1009,7 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
       "body": "{$printSearchResultsCondition}{$editionTable}{@Copyright}: {Copyright}",
