--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
@@ -72,10 +72,10 @@
       }
     },
     "middle-right-panel": {
-      "body": "<img src='/images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
+      "body": "<img src='{$baseUrl}images/logo/logo-bib.{ProjectType}.png' title='{ProjectTypeString}'>"
     },
     "bottom-panel": {
-      "body": "{$printSearchResultsCondition}{$editionTable}<a href='/EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
+      "body": "{$printSearchResultsCondition}{$editionTable}<a href='{$baseUrl}EditionNote/EditionNote?bookId={BookId}'>{@EditionNote}</a> <br> {@Copyright}: {Copyright}",
       "variables": {
         "$editionTable": {
           "type": "table",
