--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Editions/content/BibliographyPlugin/list_configuration.json
@@ -107,6 +107,10 @@
               "pattern": "{$literaryGenre}"
             },
             {
+              "label": "TextType",
+              "pattern": "{TextTypeString}"
+            },
+            {
               "label": "EditionLastModification",
               "pattern": "{CreateTimeString}"
             },
