--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/content/BibliographyConfiguration/configuration.json
@@ -107,6 +107,10 @@
               "pattern": "{$literaryGenre}"
             },
             {
+              "label": "TextType",
+              "pattern": "{TextTypeString}"
+            },
+            {
               "label": "EditionLastModification",
               "pattern": "{CreateTimeString}"
             },
@@ -330,6 +334,10 @@
             {
               "label": "LiteraryGenre",
               "pattern": "{$literaryGenre}"
+            },
+            {
+              "label": "TextType",
+              "pattern": "{TextTypeString}"
             },
             {
               "label": "EditionLastModification",
@@ -854,6 +862,10 @@
             {
               "label": "LiteraryGenre",
               "pattern": "{$literaryGenre}"
+            },
+            {
+              "label": "TextType",
+              "pattern": "{TextTypeString}"
             },
             {
               "label": "EditionLastModification",
