Added configurable notesButton

--- a/UJCSystem/ITJakub.Web.Hub/portalconfig.ResearchPortal.json
+++ b/UJCSystem/ITJakub.Web.Hub/portalconfig.ResearchPortal.json
@@ -27,6 +27,10 @@
       "HeadwordDescriptionTokenDistance": true,
       "SelectedCategory": true,
       "Term": true
+    },
+
+    "ReaderConfig": {
+      "DisplayNotes": true
     }
   }
 }
