Disable project editor permissions in Research portal, disable also check admin permission in backend

--- a/UJCSystem/ITJakub.Web.Hub/portalconfig.CommunityPortal.json
+++ b/UJCSystem/ITJakub.Web.Hub/portalconfig.CommunityPortal.json
@@ -28,9 +28,14 @@
       "SelectedCategory": true,
       "Term": true
     },
-    
     "ReaderConfig": {
       "DisplayNotes": false
+    },
+    "UsedProjectPermissions": {
+      "ShowPublished": true,
+      "ReadProject": true,
+      "EditProject": true,
+      "AdminProject": true
     }
   }
 }
