Unify forum config for MainService and WebHub

--- a/UJCSystem/ITJakub.Web.Hub/appsettings.LocalDebug.json
+++ b/UJCSystem/ITJakub.Web.Hub/appsettings.LocalDebug.json
@@ -8,7 +8,7 @@
   "OpenIdConnect": {
     "Url": "https://localhost:44395/"
   },
-  "Forum": {
-    "Url": "http://localhost:50165/"
+  "ForumOptions": {
+    "ForumBaseUrl": "http://localhost:50165/"
   }
 }
