--- a/UJCSystem/ITJakub.Web.Hub/appsettings.json
+++ b/UJCSystem/ITJakub.Web.Hub/appsettings.json
@@ -40,7 +40,7 @@
     "ExpirationTimeInSeconds": 300,
     "LoginCheckPath": "Account/CheckLogin"
   },
-  "Forum": {
-    "Url": "https://localhost/Forum"
+  "ForumOptions": {
+    "ForumBaseUrl": "https://localhost/Forum"
   }
 }
